# CSC2004-Project

./: CMakeLists.txt  README.md  barcode.c  encoder.c  encoder.h  ir_sensor.c  ir_sensor.h  lwipopts.h  main.c  main_line_following.c  main_reference.c  main_with_line_following.c  motor.h  package-lock.json  pico_sdk_import.cmake  pid.c  state.h  straight_mode.c  straight_mode.h
barcode/: CMakeLists.txt.  barcode.h  main.c
dashboard/: app.js  package-lock.json  package.json  test_mqtt.py
dashboard/public/: index.html
drivers/: barcode.c  barcode.h  config.h  encoder.c  encoder.h  imu.c  imu.h  ir_sensor.c  ir_sensor.h  main.c  motor.c  motor.h  pid.c  pid.h  servo.c  servo.h  state.c  state.h  ultrasonic.c  ultrasonic.h
src/: main.c
test/: test_encoder.c  test_imu.c  test_ir_sensor.c  test_motor.c  test_servo.c  test_ultra.c
